# openalgo-python-library

./: .gitignore  CHANGELOG.md  LICENSE  PKG-INFO  README.md  publish.py  pyproject.toml  setup.py  test_api_live.py  test_instruments.py  test_instruments_all.py  test_instruments_fixed.py  test_nifty_hedge_margin.py  test_optionsmultiorder.py
audit/: AUDIT02_IMPLEMENTATION_SUMMARY.md  AUDIT_OPTIMIZATION_REPORT.md  FINAL_AUDIT_REPORT_20250815_204944.md  LARGE_DATA_SPEED_AUDIT_SUMMARY.md  OPTIMIZATION_SUMMARY.md  OPTIMIZED_INDICATORS_TEST_20250815_222951.txt  audit01.md  audit02.md  audit03.md  audit04.md  audit05.md  audit_hybrid.md  audit_momentum.md  audit_oscillators.md  audit_statistics.md  audit_trend.md  audit_utils.md  audit_volatility.md  audit_volume.md  speed.md  test_all_indicators_comprehensive.py  test_all_indicators_corrected.py  test_all_indicators_final.py  test_optimized_indicators.py  test_speed_large_data.py
docs/: DOCUMENTATION_INDEX.md  FINAL_INDICATOR_VALIDATION_REPORT.md  FUNCTION_ABBREVIATIONS_LIST.md  INDICATORS_QUICK_REFERENCE.md  INDICATOR_SUMMARY_ANALYSIS.md  INDICATOR_VALIDATION_REPORT.md  INDICATOR_VERIFICATION_REPORT.md  PARAMETERS_REFERENCE.md  README.md  TECHNICAL_INDICATORS_GUIDE.md  TECHNICAL_INDICATORS_SUMMARY.md  TRADING_STRATEGIES_EXAMPLES.md  VERBOSE_CONTROL.md  parameters_demo.py  python_sdk.md
examples/: README.md  account_test.py  data_examples.py  depth_example.py  feed_examples.py  historical_5m_example.py  indicators_examples.py  margin_example.py  options_examples.py  order_examples.py  order_test.py  quote_example.py  (+5 more)
(+72 files in other folders)
