[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "layr0-IMC"
version = "1.1.3"
description = "A Python library for interacting with layr0_imc's trading APIs with high-performance technical indicators"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Aloy Aditya Sen", email = "adysenlab@gmail.com"}
]
dependencies = [
    "httpx>=0.23.0",
    "pandas>=1.2.0",
    "websocket-client>=1.8.0",
    "numpy>=2.0.0",
    "numba>=0.63.0b1"
]
keywords = ["trading", "algorithmic-trading", "finance", "websocket", "market-data", "technical-analysis", "indicators"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.urls]
Documentation = "https://docs.layr0_imc.in"
Source = "https://github.com/layr0_imc/layr0_imc-python"
Tracker = "https://github.com/layr0_imc/layr0_imc-python/issues"

[tool.setuptools]
packages = ["layr0_imc", "layr0_imc.indicators"]
